# voyageAI-embedding-replica

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: auth.py  autoscaling.py  batch_worker.py  batching_client.py  config.py  embeddings.py  main.py  metrics.py  metrics_exporter.py  model_registry.py  queue_inspection.py  queue_models.py  redis_batch_queue.py  redis_keys.py  response_normalization.py  schemas.py  tokenization.py  vllm_client.py  workload.py
docs/: README.md  phase3d-autoscaling.md
k8s/: PHASE2_GKE.md  README.md
k8s/autoscaling/: document-worker-scaledobject.yaml  kustomization.yaml  query-worker-scaledobject.yaml
k8s/autoscaling/optional/: vllm-nano-scaledobject.yaml  warm-gpu-pool-notes.md
k8s/base/: batch-worker-deployment.yaml  configmap.yaml  document-batch-worker-deployment.yaml  embedding-api-deployment.yaml  embedding-api-service.yaml  gateway.yaml  httproute.yaml  kustomization.yaml  namespace.yaml  redis-deployment.yaml  redis-service.yaml  secret.example.yaml  vllm-large-shim-deployment.yaml  vllm-large-shim-service.yaml  vllm-nano-deployment.yaml  vllm-nano-service.yaml
k8s/observability/: document-batch-worker-metrics-service.yaml  kustomization.yaml  metrics-exporter-deployment.yaml  metrics-exporter-service.yaml  prometheus-configmap.yaml  prometheus-deployment.yaml  prometheus-rbac.yaml  prometheus-service.yaml  query-batch-worker-metrics-service.yaml
scripts/: build_push_gateway.sh  create_k8s_secrets.sh  curl_embeddings.sh  gke_bootstrap.sh  load_test_documents.py  load_test_queries.py  validate_phase3d_manifests.sh  watch_autoscaling.sh
tests/: test_autoscaling.py  test_embeddings_service_batching.py  test_metrics.py  test_model_registry.py  test_queue_inspection.py  test_queue_models.py  test_redis_keys.py  test_schemas.py  test_workload.py
